# data-engineering-projects

./: .gitignore  README  README.md
projects/01-real-time-stock-market-analysis-kafka/: README.md  pyproject.toml
projects/01-real-time-stock-market-analysis-kafka/stock_market_kafka/: Kafka_Consumer.ipynb  Kafka_Producer.ipynb
