[tool.poetry]
name = "01-real-time-stock-market-analysis-kafka"
version = "0.1.0"
description = ""
authors = ["Peter <pwsandoval@outlook.com>"]
readme = "README.md"
packages = [{ include = "stock_market_kafka" }]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.23.1"
kafka-python = "^2.0.2"
pandas = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
